Model defined correctly

--- a/cfg/yolov3.cfg
+++ b/cfg/yolov3.cfg
@@ -22,6 +22,8 @@ policy=steps
 steps=400000,450000
 scales=.1,.1
 
+
+# input shape  [-1, x, x, 3]
 [convolutional]
 batch_normalize=1
 filters=32
@@ -29,6 +31,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+#output shape = [-1, x, x, 32]
 
 # Downsample
 
@@ -39,6 +42,7 @@ size=3
 stride=2
 pad=1
 activation=leaky
+#output shape = [-1, x/2, x/2, 64]
 
 [convolutional]
 batch_normalize=1
@@ -47,6 +51,7 @@ size=1
 stride=1
 pad=1
 activation=leaky
+#output shape = [-1, x/2, x/2, 32]
 
 [convolutional]
 batch_normalize=1
@@ -55,10 +60,12 @@ size=3
 stride=1
 pad=1
 activation=leaky
+#output shape = [-1, x/2, x/2, 64]
 
 [shortcut]
 from=-3
 activation=linear
+#output shape = [-1, x/2, x/2, 64]
 
 # Downsample
 
